# nlw-operator-computer-vision

./: README.md
computer_vision_app/: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
computer_vision_app/assets/: script.js  style.css
computer_vision_app/core/: __init__.py  config.py  model_loader.py  processor.py  utils.py  webcam_recog.py
lenet/: README.md  lenet5.ipynb  lenet5_mnist.pth
recog_system/: README.md  clipseg_segmentation.ipynb  collect_data.py  gemini_vision.ipynb  gesture_classifier.joblib  pyproject.toml  timm_classification.ipynb  train_model.py  webcam_mediapipe.ipynb
